# Turbomachinery-Rotors-Balancing

./: .gitignore  Ill_conditioned_planes.ipynb  Makefile  README.md  Robust_optimization.ipynb  Rotor_Balancing.py  TODO.md  \  enviroment.yaml  environment.yml  example_script.py  hsbalance_Playground-Copy1.ipynb  hsbalance_Playground-splitting.ipynb  hsbalance_Playground.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  test_numpy_lstsq.py
.ipynb_checkpoints/: hsbalance_Playground-checkpoint.ipynb  hsbalance_Playground-splitting-checkpoint.ipynb
Rotor_Balance_module/: README.md  Rotor_Balancing.py  requirement.txt
data/: test_conditions.txt
docs/: contribution.html  make.bat  references.html  testCases.html  test_cases_table.html  walkThroughExample.html
docs/_layouts/: default.html
docs/doctrees/: environment.pickle  index.doctree  performanceTest.doctree  testCases.doctree
docs/html/: .buildinfo  documentation.html  hsbalance.html  (+4 more)
examples/: Balancing-All.ipynb  Ill_conditioned_planes.ipynb  Robust_optimization.ipynb  Selecting_conditions.ipynb  Solving Multi-Conditions .ipynb  Solving_Multi-Conditions.ipynb  environment.yml  example_script.py  hsbalance_Playground-splitting.ipynb  hsbalance_Playground.ipynb  output  splitting-WLS.ipynb  xclip
hsbalance/: ALPHA.py  CI_matrix.py  TODO.md  model.py  tools.py
html/: README.html  genindex.html  index.html
test/: README.md  benchmark_splitting_solver.md  config.yaml  test_ALPHA.py  test_LMI.py  test_LSE.py  test_WLS.py  test_minmax.py  test_model.py  test_splitting.py  test_tools.py
(+43 files in other folders)
