[metadata]
name = hsbalance-MagedMohamedTurk 
version = 0.0.1
author = Maged El-Torkoman
author_email = newmaged@gmail.com
description = A python package to solve the problem of high speed rotor balancing 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MagedMohamedTurk/Turbomachinery-Rotors-Balancing 
project_urls =
    Bug Tracker = https://github.com/MagedMohamedTurk/Turbomachinery-Rotors-Balancing/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = hsbalance
packages = find:
python_requires = >=3.8

[options.packages.find]
where = hsbalance



